# swagger/v1/swagger.yaml
@@ -28,9 +28,12 @@ paths:
           email:
             type: string
             example: john.doe@example.com
-          name:
+          name_en:
             type: string
             example: John Doe
+          name_fa:
+            type: string
+            example: جان ذو
           color:
             type: string
             example: "#ff5512"
@@ -63,7 +66,7 @@ paths:
                       type: string
                       example: john.doe@example.com
                     name:
-                      type: string
+                      type: string0
                       example: John Doe
                     user_id:
                       type:
@@ -114,6 +117,12 @@ paths:
                       - string
                       - nil
                       example: "#ff5512"
+                    translations:
+                      type: object
+                      example:
+                        name:
+                          en: John Doe
+                          fa: جان دو
     post:
       summary: Creating a new member
       tags:
@@ -133,7 +142,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -184,6 +193,12 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
   "/organizations/{organization_id}/members/{id}":
     parameters:
     - name: organization_id
@@ -206,7 +221,7 @@ paths:
           email:
             type: string
             example: john.doe@example.com
-          name:
+          name_en:
             type: string
             example: Updated Name
           color:
@@ -239,7 +254,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -290,6 +305,12 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
     patch:
       summary: Updates the members
       tags:
@@ -309,8 +330,8 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
-                    example: Updated Name
+                    type: string0
+                    example: John Doe
                   user_id:
                     type:
                     - integer
@@ -360,6 +381,15 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
+                  name_en:
+                    type: string
+                    example: Updated Name
   "/organizations/{organization_id}/members/{id}/archive":
     parameters:
     - name: organization_id
@@ -393,7 +423,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -444,6 +474,12 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
   "/organizations/{organization_id}/members/{id}/unarchive":
     parameters:
     - name: organization_id
@@ -477,7 +513,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -528,6 +564,12 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
   "/organizations/{organization_id}/members/{id}/set_as_admin":
     parameters:
     - name: organization_id
@@ -561,7 +603,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -612,6 +654,12 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
   "/organizations/{organization_id}/members/{id}/revoke_admin":
     parameters:
     - name: organization_id
@@ -645,7 +693,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -696,6 +744,12 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
   "/organizations/{organization_id}/members/{id}/resend_invitation":
     parameters:
     - name: organization_id
@@ -729,7 +783,7 @@ paths:
                     type: string
                     example: john.doe@example.com
                   name:
-                    type: string
+                    type: string0
                     example: John Doe
                   user_id:
                     type:
@@ -780,6 +834,48 @@ paths:
                     - string
                     - nil
                     example: "#ff5512"
+                  translations:
+                    type: object
+                    example:
+                      name:
+                        en: John Doe
+                        fa: جان دو
+  "/organizations":
+    post:
+      summary: Create an organization
+      tags:
+      - Organizations
+      parameters: []
+      responses:
+        '200':
+          description: Creates a trial organization
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  name:
+                    type: string
+                    example: Sample Organization
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Sample Organization
+                  description: If the name is not presented a random name will be
+                    assigned.
+                is_trial:
+                  type: boolean
+                  example: true
+              required:
+              - is_trial
   "/users/confirmation":
     get:
       summary: Confirm user email
@@ -838,7 +934,7 @@ paths:
                   timezone:
                     type: string
                     example: UTC
-                  language:
+                  locale:
                     type: string
                     example: en
                   confirmation_sent_at:
@@ -862,7 +958,7 @@ paths:
                 timezone:
                   type: string
                   example: UTC
-                language:
+                locale:
                   type: string
                   example: en
   "/users/sign_in":
